// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoMetadata Renders with view count 1`] = `
<div
  className="video-metadata"
>
  <h3 />
  <div
    className="video-stats"
  >
    <span>
      199,234
       Views
    </span>
    <div
      className="video-actions"
    >
      <Rating
        dislikeCount="NaN"
        likeCount="NaN"
      />
      <Button
        as="button"
        basic={true}
        icon={true}
        labelPosition="left"
      >
        <Icon
          as="i"
          name="share"
        />
        Share
      </Button>
      <Button
        as="button"
        basic={true}
        icon={true}
      >
        <Icon
          as="i"
          name="ellipsis horizontal"
        />
      </Button>
    </div>
  </div>
  <Divider />
</div>
`;

exports[`VideoMetadata Renders without props 1`] = `
<div
  className="video-metadata"
>
  <h3 />
  <div
    className="video-stats"
  >
    <span>
      NaN
       Views
    </span>
    <div
      className="video-actions"
    >
      <Rating
        dislikeCount="NaN"
        likeCount="NaN"
      />
      <Button
        as="button"
        basic={true}
        icon={true}
        labelPosition="left"
      >
        <Icon
          as="i"
          name="share"
        />
        Share
      </Button>
      <Button
        as="button"
        basic={true}
        icon={true}
      >
        <Icon
          as="i"
          name="ellipsis horizontal"
        />
      </Button>
    </div>
  </div>
  <Divider />
</div>
`;
